# ragqa

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  papers.txt  pyproject.toml
scripts/: download_papers.py
src/ragqa/: __init__.py  config.py  exceptions.py  protocols.py
src/ragqa/cli/: app.py  banner.py  display.py
src/ragqa/core/: models.py  pdf_loader.py  rag_chain.py
src/ragqa/llm/: client.py  prompts.py
src/ragqa/retrieval/: bm25_index.py  embeddings.py  query_classifier.py  reranker.py  retriever.py  vectorstore.py
tests/: __init__.py  conftest.py
tests/core/: test_pdf_loader.py  test_rag_chain.py
tests/golden/: test_cases.json
tests/llm/: test_client.py
tests/retrieval/: test_bm25_index.py  test_embeddings.py  test_query_classifier.py  test_reranker.py  test_retriever.py  test_vectorstore.py
